# idling

./: .gitignore  Anchor.toml  Cargo.toml  README.md  clean.sh  idle_plants-keypair.json  package.json  plant-mint-keypair-2.json  plant-mint-keypair.json  player-keypair.json  testkey.json
app/: README.md  package.json
app-next/: package.json
app-next/src/components/: AppBar.tsx  ContentContainer.tsx  Footer.tsx  Notification.tsx  PointsDisplay.tsx  Sidebar.tsx  TokenFaucet.tsx
app-next/src/hooks/: index.ts  useAddresses.tsx  usePlanterAddresses.tsx  useProgram.tsx  useQueryContext.tsx
app-next/src/models/: plantSourceData.ts  routes.ts  types.ts
app-next/src/pages/: _app.tsx  _document.tsx  faucet.tsx  furnace.tsx  garden.tsx  inventory.tsx  leaderboard.tsx  profile.tsx  shop.tsx  submit.tsx
app-next/src/utils/: deserialize.ts
app-next/src/views/: faucet.tsx  garden.tsx  index.tsx
app/public/: index.html
app/src/: App.tsx
app/src/common/: actions.ts
app/src/components/: AppBar.tsx  AppTitle.tsx  ClickerInterface.tsx  ContentContainer.tsx  Footer.tsx  Notification.tsx  Sidebar.tsx  Spinner.tsx  index.tsx
app/src/containers/: ClickerInterface.tsx  GameContainer.tsx  NFTRow.tsx  PlantsInterface.tsx  PointsDisplay.tsx  Router.tsx  StakingInterface.tsx  index.ts
app/src/contexts/: ContextProvider.tsx  connection.tsx
app/src/hooks/: index.ts  useAddresses.tsx  useMint.tsx  usePlantAddresses.tsx  (+4 more)
keypairs/: idling-keypair.json  leaderboard-keypair.json  plant-mint-keypair-3.json  plant-mint-keypair-4.json
lib/idle-common/: Cargo.toml
programs/idle-plants/: Cargo.toml
programs/idle-plants/src/: errors.rs  lib.rs
programs/idle-plants/src/instructions/: apply_item_planter.rs  begin_growing.rs  create_item.rs  harvest_planter.rs  init_plant.rs  init_recipe.rs  mod.rs  water_planter.rs
programs/idle-plants/src/state/: mod.rs  plant.rs  planter.rs  recipe.rs
programs/idling/: Cargo.toml
programs/idling/src/: errors.rs  lib.rs
programs/idling/src/instructions/: do_click.rs  init_clicker.rs  init_treasury.rs  mod.rs
programs/idling/src/state/: clicker.rs  mod.rs  treasury.rs
programs/leaderboard/: Cargo.toml
programs/leaderboard/src/: errors.rs  lib.rs
programs/leaderboard/src/instructions/: init_leaderboard.rs  mod.rs  submit_plant.rs
programs/leaderboard/src/state/: board_entry.rs  leaderboard.rs  mod.rs
tests/: common.ts  idling.ts
(+27 files in other folders)
