[package]
name = "idle-plants"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idle_plants"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.21.0", features=["init-if-needed"]}
anchor-spl = "0.21.0"
idling = {path = "../idling", features = ["cpi"]}
idle-common = {path = "../../lib/idle-common"}
