[package]
name = "idling"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idling"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.20.0"
anchor-spl = "0.20.0"
idle-common = {path = "../../lib/idle-common"}
